# fugaso_common

./: .gitignore  Cargo.toml
.github/: copilot-instructions.md
fugaso_admin/: .gitignore  Cargo.toml
fugaso_admin/packets/mega_thunder/: 00-no_win.json  01-win.json  11-s-multi_2.json  20-fs-init_win_line.json  21-fs-init_win_line_col.json  23-fs-multi_5.json  24-fs-grand.json  25-fs-grand.json  config.json  packets-init.json
fugaso_admin/packets/thunder_express/: 00-no_win.json  02-fs.json  packets-init.json
fugaso_admin/src/: cache.rs  config.rs  database.rs  dispatcher.rs  lib.rs  logger.rs  manager.rs
fugaso_admin/src/resources/: application.json
fugaso_admin/src/route/: actuator.rs  client.rs  error.rs  health.rs  launch.rs  metrics.rs  mod.rs  options.rs  tournament.rs
fugaso_admin/tests/: dispatcher.rs  integration.rs  mega_thunder_test.rs  thunder_express_test.rs
fugaso_config/: Cargo.toml
fugaso_config/src/: lib.rs
fugaso_config/src/resources/: bets.json
fugaso_core/: Cargo.toml
fugaso_core/src/: admin.rs  lib.rs  protocol.rs  proxy.rs  tournament.rs
fugaso_data/: Cargo.toml
fugaso_data/src/: common_round.rs  fugaso_action.rs  fugaso_percent.rs  fugaso_round.rs  launch_info.rs  lib.rs  promo_account.rs  promo_stats.rs  promo_transaction.rs  repo.rs  sequence_generator.rs  tournament_gain.rs
fugaso_math/: Cargo.toml
fugaso_math/src/: config.rs  fsm.rs  lib.rs  math.rs  protocol.rs  rand.rs  validator.rs
fugaso_math_ed6/: Cargo.toml
fugaso_math_ed6/src/: config.rs  lib.rs  math.rs  protocol.rs  rand.rs
fugaso_math_ed6/src/resources/: bonanza_link_1000.json  thunder_express.json  thunder_express_reels.json
fugaso_math_ed7/: Cargo.toml
fugaso_math_ed7/src/: config.rs  lib.rs  math.rs  protocol.rs  rand.rs
fugaso_math_ed7/src/resources/: mega_thunder.json  mega_thunder_reels.json
fugaso_service/: Cargo.toml
fugaso_service/src/: main.rs
fugaso_test/: Cargo.toml
fugaso_test/src/: database_configuration.rs  lib.rs
