[package]
name = "fugaso_data"
version = "0.1.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
essential_data = { workspace = true }
essential_rand = { workspace = true }
essential_core = { workspace = true }
async-trait.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
log.workspace = true
redis = { workspace = true, optional = true }
redis-macros = { workspace = true, optional = true }

[features]
redis = ["dep:redis", "dep:redis-macros", "essential_data/redis"]

[dev-dependencies]
serde_json.workspace = true
chrono = { workspace = true }
bincode = "1.3.3"
rmp-serde = "1.1.2"
serde_cbor = "0.11.2"
polodb_core = "4.4.0"
