[package]
name = "fugaso_math"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
essential_async = { workspace = true }
essential_rand = { workspace = true }
essential_core = { workspace = true }
fugaso_data = { path = "../fugaso_data" }
serde = { workspace = true }
log = { workspace = true }
lazy_static = { workspace = true }
mockall = { workspace = true }
serde_json = { workspace = true }
sea-orm = { workspace = true }
num-traits = { workspace = true }
maplit = { workspace = true }
