[package]
name = "fugaso_math_ed6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
essential_core = { workspace = true }
essential_rand = { workspace = true }
fugaso_data = { path = "../fugaso_data" }
fugaso_math = { path = "../fugaso_math" }
log.workspace = true
sea-orm.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
lazy_static = { workspace = true }
mockall = { workspace = true }
maplit = { workspace = true }
