[package]
name = "fugaso_test"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fugaso_data = { path = "../fugaso_data"}

[dependencies.sea-orm]
version = "0.12.15" # sea-orm version
features = [
    "debug-print",
    "runtime-tokio-rustls",
    "sqlx-postgres"
]